# ding

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
assets/demo/: RECORDING_GUIDE.md
docs/: claude_hooks_mvp.md  implementation_plan.md  review_issue_list.md  task.md  ui_design_concepts.md  需求.md
scripts/: convert-demo-video.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_hooks.rs  claude_proxy.rs  commands.rs  events.rs  ipc.rs  lib.rs  main.rs  monitor.rs
src-tauri/src/adapter/: claude_code.rs  codex.rs  mod.rs
src-tauri/src/cli/: commands.rs  mod.rs
src-tauri/src/instance/: manager.rs  model.rs
src/components/: ActionPanel.tsx  InstanceCard.tsx  LogViewer.tsx  StatusDot.tsx
src/stores/: instanceStore.ts
src/styles/: global.css
src/types/: instance.ts
