[package]
name = "ding"
version = "0.1.0"
description = "Desktop Interactive Node Guard - AI Agent Monitor"
authors = ["you"]
edition = "2021"
default-run = "ding"

[lib]
name = "ding_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "ding-hook"
path = "src/bin/ding-hook.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Media_Audio",
] }
